# theo

./: .gitignore  README.md  README.txt  pyproject.toml
amicablenumbers/: find_them.py
code/: aliens.py  bouncing.py  drawing.py  gnop.py  heart_turtle.py  levels.py  number_guesser.py  platformer.py  pong.py  prime_numbers.py  sprites.py
code/hangman/: hangman.py
exercises/: add_to_list_of_letters.py  letters in name.py  looking at names.py
hangman/: hangman.py
notebooks/: abstraction.ipynb  building_blocks.ipynb  classes.ipynb  exercises_1-Apr-2024.ipynb  exercises_12-Mar-2024.ipynb  exercises_21-Mar-2024.ipynb  exercises_4-April-2024.ipynb  instructions.ipynb  instructions_01-Feb-2024.ipynb  instructions_13-Apr-2024.ipynb  instructions_16-Jan-2024.ipynb  instructions_18-Jan-2024.ipynb  instructions_20-Feb-2024.ipynb  instructions_22-Jan-2024.ipynb  instructions_26-Jan-2024.ipynb  list-refresher.ipynb  lists-and-dictionaries.ipynb  palindromes.ipynb  quadratics_18-Apr-2024.ipynb  scope.ipynb
notebooks/reference_and_old_code/: building_blocks.ipynb  spanish_to_english.ipynb
